# prod-rag

./: .gitignore  LICENSE  pyproject.toml
src/0.ChatModel/: test-main.py  test_cohere.py
src/1.BasicRag/: chat_main.py  doc_ingestion.py  doc_ingestion1.py  query_pipeline.py  test_main.py
src/1.BasicRag/docs/: company_policy.txt
