[project]
name = "prod-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.10",
    "langchain-cohere>=0.6.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
